--- a/liuwei-zipkin.yml
+++ b/liuwei-zipkin.yml
@@ -13,7 +13,7 @@ logging:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://eureka.eureka--staging:8761/eureka/
+      defaultZone: http://liuwei-zipkin.liuwei-zipkin--dev-liuwei:8761/eureka/
   instance:
     preferIpAddress: true
     instance-id: ${spring.cloud.client.ipAddress}:${server.port}
